fix horizontal scrollbar always on screen

--- a/css/style.css
+++ b/css/style.css
@@ -11,7 +11,6 @@
 html {
   font-family: 'Open Sans', sans-serif;
   font-size: 17px;
-  overflow: scroll;
   cursor: url("https://rc24.xyz/images/cursors/wii.cur"), default;
 }
 
